<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">KidID</string>
    <string name="kws_caption">To start demonstration say \"oh mighty computer\".</string>
    <string name="menu_caption">Say \"digits\", \"forecast\" or \"phones\" to choose the grammar, language model or phonetic decoder example.</string>
    <string name="digits_caption">To try recognition of digits: say something like \"one two three four five\".</string>
    <string name="forecast_caption">To try recognition of a weather forecast like \"sunny spells on Wednesday\".</string>
    <string name="phone_caption">To try phonetic recognition say anything.</string>

    <string name="title_activity_child_mode">ChildModeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="preparing_recognizer">Preparing the speech recognizer</string>
    <string name="failed_speech">"Failed to start speech recognition: "</string>
    <string name="started_speech">Started speech recognition</string>
    <string name="enter_child_mode">Enter Child Mode</string>
    <string name="title_activity_adult_mode">AdultMode</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="child_mode">Child Mode</string>
    <string name="connect_devices">Connect Devices</string>
    <string name="change_passcode">Change Passcode</string>
    <string name="category">Category</string>
    <string name="level">Level</string>
    <string name="help">Help</string>
    <string name="choose_category">Choose a category to change the illustrations your child will see:</string>
    <string name="choose_level">Choose a level to change the difficulty of the illustrations:</string>
    <string name="currently_unavailable">Currently unavailable</string>
    <string name="presentation">Presentation</string>
    <string name="in_progress">In progress</string>
    <string name="no_bluetooth">No Bluetooth</string>
    <string name="enabled">Enabled</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="enable_bluetooth">Enable Bluetooth</string>
    <string name="enable">Enable</string>
    <string name="use_the_system_settings_to_pair_your_devices">Use the system settings to pair your devices</string>
    <string name="choose_a_device">Choose a device:</string>

    <string name="password_tool_tip">Enter a number</string>
    <string name="help_layout">Welcome to kid ID app\n\n\n 1.To pair with another android device click on pair\n
        2. To enter password click on passcode \n
        3. To see a list of images click on catagory\n
        4. To play images autonomously click on presentation mode
    </string>
</resources>